--- a/code.ipynb
+++ b/code.ipynb
@@ -75,9 +75,9 @@
         "\n",
         "    # Classify the new image based on the similarity score and threshold\n",
         "    if similarity_score >= threshold:\n",
-        "        return \"good\"\n",
+        "        return \"The tooth is not worn\"\n",
         "    else:\n",
-        "        return \"worn good job\"\n",
+        "        return \"The tooth is worn\"\n",
         "\n",
         "#testing the other picture\n",
         "new_image_path = '/content/worntooth.PNG'\n",
