--- a/code.ipynb
+++ b/code.ipynb
@@ -53,7 +53,7 @@
         "vgg_model = VGG16(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
         "\n",
         "# Load and preprocess the reference image\n",
-        "reference_image_path = '/content/tooth.PNG'\n",
+        "reference_image_path = '/content/tooth.jpeg'\n",
         "reference_image = cv2.imread(reference_image_path)\n",
         "reference_image = cv2.resize(reference_image, (224, 224))  # Resize to VGG16 input size\n",
         "reference_image = preprocess_input(reference_image.astype(np.float32))  # Preprocess input for VGG16\n",
@@ -80,7 +80,7 @@
         "        return \"The tooth is worn\"\n",
         "\n",
         "#testing the other picture\n",
-        "new_image_path = '/content/worntooth.PNG'\n",
+        "new_image_path = '/content/worntooth.jpeg'\n",
         "classification_result = classify_similarity(new_image_path, threshold=0.8)\n",
         "print(\"Classification Result:\", classification_result)"
       ]
