--- a/code.ipynb
+++ b/code.ipynb
@@ -16,29 +16,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M2gjYjVD97g-",
-        "outputId": "ca8db975-8e1e-43e8-a48b-efd03f67bc32"
+        "outputId": "0583cf03-4e55-464e-db36-86c4839f3667"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:tensorflow:5 out of the last 9 calls to <function Model.make_predict_function.<locals>.predict_function at 0x79b903fff910> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 1s 612ms/step\n",
-            "1/1 [==============================] - 0s 479ms/step\n",
-            "Classification Result: worn good job\n"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 740ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 561ms/step\n",
+            "Classification Result: The tooth is worn\n"
           ]
         }
       ],
@@ -75,7 +68,7 @@
         "\n",
         "    # Classify the new image based on the similarity score and threshold\n",
         "    if similarity_score >= threshold:\n",
-        "        return \"The tooth is not worn\"\n",
+        "        return \"The tooth is in good condition\"\n",
         "    else:\n",
         "        return \"The tooth is worn\"\n",
         "\n",
